# KPerm

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  examples.html  genindex.html  index.html  installation.html  kperm.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: sphinx.yml
_sources/: examples.rst.txt  kperm.rst.txt
docs/notebooks/: charge-scaling.ipynb
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst  kperm.rst  modules.rst
docs/source/tutorials/: charge-scaling-nb.ipynb  index.rst
kperm/: __init__.py  __main__.py  channel.py  examples.py  functions.py  markov.py  permeation.py  tutorials.py  utils.py
tests/kperm/: test_permeation.py  test_utils.py
tutorials/charge-scaling/: charge-scaling.ipynb
tutorials/charge-scaling/traj-0/: kperm.csv
tutorials/charge-scaling/traj-1/: kperm.csv
tutorials/charge-scaling/traj-2/: kperm.csv
