[tool.poetry]
name = "kperm"
version = "0.1.0"
description = "Toolkit for Analysis of Permeation Cycles in Potassium Channels"
authors = ["Chun Kei (Tom) Lam <chun-kei.lam@mpinat.mpg.de>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
numpy = "^1.24.3"
MDAnalysis = "^2.4.3"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
networkx = "^3.1"
scipy = "^1.10.1"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
