[tool.poetry]
name = "kperm"
version = "0.2.0"
description = "Toolkit for Analysis of Permeation Cycles in Potassium Channels"
authors = ["Chun Kei (Tom) Lam <chun-kei.lam@mpinat.mpg.de>"]
license = "GPL-3.0"
readme = "README.md"
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
numpy = "^1.24.3"
MDAnalysis = "^2.4.3"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
networkx = "^3.1"
scipy = "^1.10.1"
jupyter = "^1.0.0"
argcomplete = "^3.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
sphinx = "^7.0.1"
coverage = {extras = ["toml"], version = "^7.2.6"}
pytest-cov = "^4.1.0"


[tool.coverage.paths]
source = ["kperm"]

[tool.coverage.run]
branch = true
source = ["kperm"]

[tool.coverage.report]
show_missing = true

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kperm = "kperm.__main__:main"